# lvgl_sdl_simulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
components/utils/: CMakeLists.txt
components/utils/include/: utils_log.h
include/: lv_demo_conf.h  lv_drv_conf.h
src/: CMakeLists.txt  main.c
src/port_sdl/: port_sdl.c
